# powerbi-rag

./: .env.example  .env.simple  .gitignore  .pre-commit-config.yaml  DEMO.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api_examples.json  architecture.md  demo_data.json
evals/: adventure_works_retrieval.jsonl
results/evals/: retrieval_eval_hybrid_20260323T142216Z.json  retrieval_eval_hybrid_20260323T142302Z.json  retrieval_eval_lexical_20260323T142216Z.json  retrieval_eval_lexical_20260323T142302Z.json
scripts/: demo_working_features.py  download_samples.py  generate_portfolio_assets.py  run_retrieval_evals.py  setup.py  simple_test.py  test_adventure_works.py
src/powerbi_rag/: __init__.py  cli.py
src/powerbi_rag/api/: main.py
src/powerbi_rag/extraction/: models.py  pbix_extractor.py
src/powerbi_rag/processing/: embeddings.py
src/powerbi_rag/retrieval/: hybrid_retriever.py  lexical_store.py  rag_pipeline.py  vector_store.py
src/powerbi_rag/ui/: gradio_app.py
src/powerbi_rag/utils/: caching.py  config.py
tests/: conftest.py  test_api.py  test_basic.py  test_extraction.py  test_hybrid_retrieval.py  test_rag_pipeline.py
